--- a/Airport-Frontend/src/styles/AdminDashboard.css
+++ b/Airport-Frontend/src/styles/AdminDashboard.css
@@ -2,23 +2,57 @@
   width: 100vw;
   height: 100vh;
   display: flex;
-  flex-direction: column; 
-  align-items: center;    
-  justify-content: center;                
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-
 .adminPanel {
-  background-color: white;
-  padding: 32px 48px;
-  border-radius: 12px;
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-  text-align: center;
-  width: 100%;
-  max-width: 600px;
-  height: 300px;
+  display: flex;
+  width: 550px;
+  justify-content: space-between;
+  align-items: flex-start;
+  background: white;
+  padding: 20px;
+  border-radius: 10px;
+  margin-top: 20px;
+  gap: 20px;
 }
 
 .btn {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
+
+.adminButtons {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  margin-top: 50px;
+}
+
+.adminButton {
+  width: 220px;
+  height: 40px;
+  font-size: 16px;
+  border: none;
+  border-radius: 8px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: transform 0.1s ease-in-out;
+}
+
+.adminButton:hover {
+  transform: scale(1.02);
+}
+
+.adminMap {
+  width: 300px;
+  height: 240px;
+  background-color: #f0f0f0;
+  border-radius: 8px;
+  border: 2px solid #000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
