--- a/Airport-Frontend/src/styles/App.css
+++ b/Airport-Frontend/src/styles/App.css
@@ -3,6 +3,7 @@
   margin: 0;
   padding: 0;
   text-align: center;
+  background-image: linear-gradient(#73E3FF,#2E8584); 
 }
 
 .appContainer {
@@ -25,6 +26,7 @@
 
 .card h1 {
   color: black;
+  text-shadow: 2px 1.4px rgb(158, 158, 158);
 }
 
 .buttonGroup {
@@ -37,14 +39,19 @@
   padding: 8px 16px;
   border: none;
   border-radius: 6px;
-  background: #6dd5fa;
+  /* background: #6dd5fa; */
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   cursor: pointer;
   font-weight: bold;
-  transition: background 0.2s ease;
+  transition: 0.4s;
+  background-image: linear-gradient(#73E3FF,#2E8584);
+  border: solid 0.5px #2E8584;
+  text-shadow: 1px 1px rgb(77, 76, 76);
 }
 
 .btn:hover {
   background: #2193b0;
   color: white;
+  opacity: 1;
+  border: solid 0.5px #73E3FF;
 }
