--- a/Airport-Frontend/src/styles/FlightTracker.css
+++ b/Airport-Frontend/src/styles/FlightTracker.css
@@ -4,11 +4,12 @@
   display: flex;
   flex-direction: column; 
   align-items: center;    
-  justify-content: center;  
+  justify-content: center;
+  background-image: linear-gradient(#73E3FF,#2E8584);  
 }
 
 .flightPanel {
-  background-color: rgb(11, 2, 141);
+  background-color: rgb(253, 253, 253);
   padding: 32px 48px;
   border-radius: 12px;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
@@ -16,29 +17,69 @@
   width: 100%;
   max-width: 600px;
   height: 300px;
+  border: 1px solid black;
 }
 
 .btn {
     margin-bottom: 20px;
+    border: 1px solid black;
 }
 
 .flightTable {
   width: 100%;
-  border-collapse: collapse;
+  border-collapse: separate; /* use collapse after data entered for table */
+  border: 1px solid #000000;
+  border-spacing: 0;
+  border-radius: 12px;
   font-family: Arial, sans-serif;
+  overflow: hidden;
 }
 
 .flightTable th,
 .flightTable td {
   padding: 12px;
   text-align: center;
-  border: 1px solid #ffffff;
+  border: 1px solid #000000;
   font-size: 14px;
 }
 
 .flightTable th {
-  color: white;
+  color: rgb(0, 0, 0);
   font-weight: bold;
   position: sticky;
   top: 0px;
+}
+
+h1{
+  color: white;
+  text-shadow: 2px 2px rgb(46, 46, 46);
+}
+
+.flightPanelHeader {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 20px;
+  width:100%;
+  background-color: white;
+}
+
+.airportDropdown {
+  padding: 8px 12px;
+  font-size: 16px;
+  background-color: white;
+  color: black;
+  border: 1px solid black;
+  border-radius: 6px;
+  appearance: none;
+  background-image: url("data:image/svg+xml;utf8,<svg fill='black' height='12' viewBox='0 0 24 24' width='12' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/></svg>");
+  background-repeat: no-repeat;
+  background-position: right 10px center;
+  background-size: 20px;
+  padding-right: 30px; /* Space for arrow */
+}
+
+.flightToggleWrapper button {
+  margin-top: 10px;
 }
