--- a/Airport-Frontend/src/styles/ManageAircrafts.css
+++ b/Airport-Frontend/src/styles/ManageAircrafts.css
@@ -1,3 +1,13 @@
+.aircraftPage {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-image: linear-gradient(#73E3FF,#2E8584); 
+}
+
 .manageAircrafts {
   padding: 40px 20px;
   color: white;
