--- a/Airport-Frontend/src/styles/ManageFlights.css
+++ b/Airport-Frontend/src/styles/ManageFlights.css
@@ -17,7 +17,7 @@
   justify-content: center;
 }
 
-.flightPanel {
+.adminFlightPanel {
    margin-top: 30px;
   background-color: #1e1e1e;
   padding: 20px;
