--- a/Airport-Frontend/src/styles/ManageAircrafts.css
+++ b/Airport-Frontend/src/styles/ManageAircrafts.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-image: linear-gradient(#73E3FF,#2E8584); 
+  background-image: linear-gradient(#73e3ff, #2e8584);
 }
 
 .manageAircrafts {
@@ -25,4 +25,90 @@
   width: 90%;
   max-width: 600px;
   text-align: center;
+}
+
+.aircraftTable {
+  background-color: rgb(253, 253, 253);
+  padding: 32px 48px;
+  border-radius: 12px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  width: 100%;
+  max-width: 800px;
+  height: auto;
+  border: 1px solid black;
+  color: black;
+}
+
+.aircraftTable th,
+.aircraftTable td {
+  padding: 12px;
+  text-align: center;
+  border: 1px solid #000000;
+  font-size: 14px;
+}
+
+.aircraftTable th {
+  color: rgb(0, 0, 0);
+  font-weight: bold;
+  position: sticky;
+  top: 0px;
+}
+
+h1 {
+  color: white;
+  text-shadow: 2px 2px rgb(46, 46, 46);
+}
+
+.aircraftTablePanelHeader {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 20px;
+  width: 100%;
+  background-color: white;
+}
+
+.aircraftDropdown {
+  padding: 8px 12px;
+  font-size: 16px;
+  background-color: white;
+  color: black;
+  border: 1px solid black;
+  border-radius: 6px;
+  appearance: none;
+  background-image: url("data:image/svg+xml;utf8,<svg fill='black' height='12' viewBox='0 0 24 24' width='12' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/></svg>");
+  background-repeat: no-repeat;
+  background-position: right 10px center;
+  background-size: 20px;
+  padding-right: 30px; /* Space for arrow */
+}
+
+.aircraftPanel input,
+.aircraftPanel select {
+  width: 100%;
+  max-width: 120px;
+  margin: 8px auto;
+  padding: 10px 14px;
+  font-size: 15px;
+  background: #ffffff;
+  color: #000;
+  border: 1px solid #000;
+  border-radius: 6px;
+}
+
+.aircraftPanel .btn {
+  margin-top: 15px;
+  padding: 10px 24px;
+  background: #6dd5fa;
+  border: 1px solid #000;
+  border-radius: 8px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.aircraftPanel .btn:hover {
+  background: #2193b0;
+  color: #fff;
 }
