Added manage flight functionality
- added functionality to add/delete flights and some styling

--- a/Airport-Frontend/src/styles/ManageAircrafts.css
+++ b/Airport-Frontend/src/styles/ManageAircrafts.css
@@ -1,6 +1,6 @@
 .aircraftPage {
   width: 100vw;
-  height: 100vh;
+  height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
