--- a/Airport-Frontend/src/styles/ManageFlights.css
+++ b/Airport-Frontend/src/styles/ManageFlights.css
@@ -1,6 +1,6 @@
 .flightPage {
   width: 100vw;
-  height: 100vh;
+  height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -18,11 +18,14 @@
 }
 
 .adminFlightPanel {
-   margin-top: 30px;
-  background-color: #1e1e1e;
-  padding: 20px;
-  border-radius: 8px;
-  width: 90%;
-  max-width: 600px;
+  background-color: rgb(253, 253, 253);
+  padding: 32px 48px;
+  border-radius: 12px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
   text-align: center;
+  width: 100%;
+  max-width: 800px;
+  height: auto;
+  border: 1px solid black;
+  color: black;
 }
