--- a/Airport-Frontend/src/styles/ManageGates.css
+++ b/Airport-Frontend/src/styles/ManageGates.css
@@ -1,6 +1,6 @@
 .gatePage {
   width: 100vw;
-  height: 100vh;
+  height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
